Bug 462177 - Greek letters are not displayed in plots
Summary: Greek letters are not displayed in plots
Status: RESOLVED FIXED
Alias: None
Product: rkward
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: RKWard Team
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-23 16:34 UTC by Francisco Cribari
Modified: 2024-08-03 21:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (49.85 KB, image/png)
2022-11-23 16:34 UTC, Francisco Cribari
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Francisco Cribari 2022-11-23 16:34:55 UTC
Created attachment 153977 [details]
Screenshot

SUMMARY
***
I run RKWad version 0.7.5-1 under Arch Linux + KDE. Greek letters do not show up in R plots in RKward 
***

STEPS TO REPRODUCE
1.  Start RKWard
2.  Execute: a = rnorm(10000); hist(a, main = expression(paste(mu,"=0")))
3. I see a blank square instead of the Greek letter "mu" in the title of the plot

OBSERVED RESULT

A black square is shown instead of the Greek letter "mu"  (see the attached screenshot)

EXPECTED RESULT

The Greek letter "mu" should be displayed in the title of the plot 

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Arch Linux + KDE 
(available in About System)
KDE Plasma Version: 5.26.3
KDE Frameworks Version: 5.100.1
Qt Version: 5.15.7

ADDITIONAL INFORMATION
--- Please fill in ---
--- IMPORTANT NOTE: If possible at all, please use the "Report bug" feature from the "Help" menu inside RKWard. Otherwise, please make sure to read http://rkward.kde.org/bugs for guidelines on what information to include in your report. ---
Comment 1 Francisco Cribari 2022-11-23 16:37:09 UTC
Greek letters are not included in R plots. To reproduce the issue, start RKward and execute: 

a = rnorm(10000); hist(a, main = expression(paste(mu,"=0")))
Comment 2 Thomas Friedrichsmeier 2022-11-24 12:45:59 UTC
Confirmed, I will investigate. However, as a quick workaround, simply:
   a = rnorm(10000); hist(a, main = "μ=0")
will work just fine, nowadays.
Comment 3 Bug Janitor Service 2024-08-03 14:46:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/education/rkward/-/merge_requests/51
Comment 4 Thomas Friedrichsmeier 2024-08-03 21:57:57 UTC
Git commit 5cc1dd4de49c1754c411ef8bcd0a92990d8b7357 by Thomas Friedrichsmeier.
Committed on 03/08/2024 at 21:57.
Pushed by tfry into branch 'master'.

QPainter does not paint using "Symbol" font

M  +1    -0    ChangeLog
M  +1    -1    rkward/rbackend/rkwarddevice/rkgraphicsdevice_frontendtransmitter.cpp
M  +7    -2    rkward/rbackend/rkwarddevice/rkgraphicsdevice_stubs.cpp

https://invent.kde.org/education/rkward/-/commit/5cc1dd4de49c1754c411ef8bcd0a92990d8b7357