QPainter does not paint using "Symbol" font

BUG: 462177