rkward/rbackend/rkwarddevice/rkgraphicsdevice_frontendtransmitter.cpp
@@ -198,7 +198,7 @@ static QFont readFont (QDataStream &instream) {
 #	warning TODO deal with line-height
 #endif
 	QFont ret;
-	if (!fontfamily.isEmpty()) ret.setFamily(fontfamily);
+	if (!(fontfamily.isEmpty() || fontfamily == "Symbol")) ret.setFamily(fontfamily); // NOTE: QPainter won't paint with "Symbol", somehow
 	if (fontface == 2 || fontface == 4) ret.setWeight (QFont::Bold);
 	if (fontface == 3 || fontface == 4) ret.setItalic (true);
 	ret.setPointSizeF (cex*ps);
